[package]
name = "energy-reporting"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.26", default-features = false, features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.11.0"
influxdb = { version = "0.7.2", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
